# lincheck

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: general.yml  publish.yml
src/: checker.rs  execution.rs  fmt.rs  lib.rs  recorder.rs  scenario.rs  spec.rs
tests/: counter.rs  stack.rs  wmm.rs
