[package]
name = "lincheck"
version = "0.2.1"
edition = "2021"
description = "A linearizability checker for concurrent data structures"
authors = ["Semyon Panenkov <smn.pankv@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SmnTin/lincheck"
documentation = "https://docs.rs/lincheck"
keywords = [
    "concurrency",
    "linearizability",
    "testing",
    "verification",
    "lock-free",
]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loom = "0.6"
proptest = "1.1"
